--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,36 +34,36 @@ body {
     transform-style: preserve-3d;
 }
 
-.product__box::before {
-    content: "BEATS";
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    font-size: 6em;
-    font-weight: 900;
-    counter-reset: #fff;
-    font-style: italic;
-    opacity: 0;
-    transition: 0.5s;
-}
+    .product__box::before {
+        content: "BEATS";
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        font-size: 6em;
+        font-weight: 900;
+        counter-reset: #fff;
+        font-style: italic;
+        opacity: 0;
+        transition: 0.5s;
+    }
 
-.product__box::after {
-    content: "AUDIO";
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    font-size: 5em;
-    font-weight: 900;
-    counter-reset: #fff;
-    font-style: italic;
-    opacity: 0;
-    transition: 0.5s;
-}
+    .product__box::after {
+        content: "AUDIO";
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        font-size: 5em;
+        font-weight: 900;
+        counter-reset: #fff;
+        font-style: italic;
+        opacity: 0;
+        transition: 0.5s;
+    }
 
-.product__box::before,
-.product__box::after {
-    opacity: 0.04;
-}
+    .product__box::before,
+    .product__box::after {
+        opacity: 0.04;
+    }
 
 .product__box__name {
     position: absolute;
@@ -77,4 +77,83 @@ body {
     transition: 0.5s;
     opacity: 0;
     z-index: 10;
+}
+
+    .product__box:hover .product__box__name {
+        top: 40px;
+        opacity: 1;
+    }
+
+.product__box__buy {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform-style: preserve-3d;
+    transform: translate3d(-50%,0,75px);
+    color: #fff;
+    background: #333;
+    padding: 10px 25px;
+    border-radius: 30px;
+    text-decoration: none;
+    transition: 0.5s;
+    opacity: 0;
+    z-index: 10;
+}
+
+    .product__box:hover .product__box__buy {
+        bottom: 30px;
+        opacity: 1;
+    }
+
+.product__box__circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.5s;
+    background: #fff;
+    transform-style: preserve-3d;
+    z-index: 10;
+    opacity: 1;
+    transform: translate3d(-50%,-50%,50px);
+}
+
+.product__box__product {
+    width: 380px;
+    position: absolute;
+    top: 50%;
+    left: 46%;
+    max-width: 300px;
+    transition: 0.5s;
+    transform-style: preserve-3d;
+    transform: translate3d(-50%,-50%,50px) rotate(-15deg);
+    z-index: 11;
+}
+
+/* .product__box:nth-child(1) .product__box__circle,
+.product__box:nth-child(1) .product__box__buy {
+    background: #2eebec;
+}
+.product__box:nth-child(2) .product__box__circle,
+.product__box:nth-child(2) .product__box__buy {
+    background: #eac62c;
+}
+.product__box:nth-child(3) .product__box__circle,
+.product__box:nth-child(3) .product__box__buy {
+    background: #f3308b;
+} */
+
+.product__box:nth-child(1) .product__box__circle,
+.product__box:nth-child(1) .product__box__buy {
+    background: #33cfcf;
+}
+.product__box:nth-child(2) .product__box__circle,
+.product__box:nth-child(2) .product__box__buy {
+    background: #eac62c;
+}
+.product__box:nth-child(3) .product__box__circle,
+.product__box:nth-child(3) .product__box__buy {
+    background: #f3308b;
 }
